Updates centos-7xia-an-zhuang-elasticsearch.md
Auto commit by GitBook Editor